--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homePage":"https://youssefdouyry/github.io/Bar-a-store",
+  "homePage": "https://YoussefDouyry/github.io/Bar-a-Store",
   "name": "app1",
   "version": "0.1.0",
   "private": true,
