--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homePage": "http://YoussefDouyry.github.io/Bar-a-Store",
+  "homepage": "http://YoussefDouyry.github.io/Bar-a-Store",
   "name": "app1",
   "version": "0.1.0",
   "private": true,
